# DigitalEqualizerRemote

./: .gitignore  .gitmodules  CMakeLists.txt  resources.qrc
qml/: DescriptiveDial.qml  Equalizer.qml  EqualizerBandControl.qml  ImageButton.qml  Player.qml  Playlist.qml  TitleLabel.qml  main.qml
src/: DigitalEqualizerRemote.cpp  DigitalEqualizerRemote.hpp  DigitalEqualizerRemoteApplication.cpp  DigitalEqualizerRemoteApplication.hpp  main.cpp
src/communication/: CommunicationProvider.cpp  CommunicationProvider.hpp  DeviceConnector.cpp  DeviceConnector.hpp  RequestSender.cpp  RequestSender.hpp  ResponseHandler.cpp  ResponseHandler.hpp
src/controller/: PlayerController.cpp  PlayerController.hpp
src/model/: ConnectionModel.cpp  ConnectionModel.hpp  EqualizerModel.cpp  EqualizerModel.hpp  PlayState.hpp  PlayerModel.cpp  PlayerModel.hpp
